<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Too Shy To Ask</string>
    <string name="page_count_total">Question %d of %d</string>
    <string name="app_images_folderName">TSTA</string>
    <string name="resend_otp">RESEND OTP </string>
    <string name="todo">TODO</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login_text">Please login to access your account</string>
    <string name="_10_digit_mobile_number">10 Digit Mobile Number</string>
    <string name="by_signing_in_you_agree_to_tsta_s">By signing in, you agree to TSTA\'s</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="and"> and </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="or">Or</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="_4_digit_otp_sent_to">4 digit OTP sent to</string>
    <string name="_9096503372">9096503372</string>
    <string name="next">Next</string>
    <string name="didn_t_receive_thr_otp">Didn\'t receive the OTP?.</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="are_you">Are you?</string>
    <string name="user">User</string>
    <string name="parent">Parent</string>
    <string name="heading_one">Nunc at elementum</string>
    <string name="heading_two">Empowering our girls, our responsibility!</string>
    <string name="heading_three">“The Too Shy to Ask” App a boon for the young teenager !</string>
    <string name="desc_one">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</string>
    <string name="desc_two">Today there are many new developments in the management of fibroids. </string>
    <string name="desc_three">India has the largest number of young people as compared to anywhere else in the world.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="your_feeds_will_be_served_basis_on_your_selection">Your feeds will be served basis on your selection</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="gujarati">Gujarati</string>
    <string name="tamil">Tamil</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="support"> | Support></string>
    <string name="_2022_all_right_reserved_powered_by_hats_off">© 2023 All Right Reserved Powered by Hats-Off</string>
    <string name="version_10_01">Version </string>
    <string name="too_shy_to_ask">Too Shy To Ask</string>
    <string name="log_out">Log Out</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="select_language">Select Language</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="select">Select</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="info_card">Info Card</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_your_dob">Select your DOB</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="country">Country*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="phone_number">Phone Number</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="do_you_have_any_health_issues">Do you have any health issues</string>
    <string name="other_topics_in_this_section">Other topics in this section.</string>
    <string name="didn_t_find_the_answer">Didn\'t find the answer?</string>
    <string name="contact_us">CONTACT US</string>
    <string name="thank_you_got_it">Thank you for your response</string>
    <string name="no">No</string>
    <string name="yes">Yes </string>
    <string name="was_this_topic_helpful">Was this topic helpful?</string>
    <string name="sorry_about_that_what_did_you_find_most_unhelpful">Sorry about that! What did you find most unhelpful</string>
    <string name="this_article_didn_t_answer_my_questions_or_solve_my_problem">This article didn\'t answer my questions or solve my problem</string>
    <string name="i_found_this_article_confusing_or_difficult_to_read">I found this article confusing or difficult to read</string>
    <string name="i_don_t_like_how_the_feature_works">I don\'t like how the feature works</string>
    <string name="change_avtar">Change Avatar</string>
    <string name="update_your_avatar">Update Your Avatar</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_screenshot">Add Media</string>
    <string name="attachment_optional">Attachment (Optional)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="info_card1">Select Categories</string>
    <string name="info_card2">Select Avatar</string>
    <string name="info_card3">Select Health Issues</string>
    <string name="info_card4">Info Card</string>
    <string name="are_you_sure_you_want_to_clear_notification">Are you sure you want to clear notification?</string>
    <string name="are_you_sure_you_want_to_clear_all_notification">Are you sure you want to clear all notification?</string>
    <string name="swipe_up_to_know_more">Click here to know more</string>
    <string name="related_blogs">Related Articles</string>
    <string name="submit_feedback">SUBMIT FEEDBACK</string>
    <string name="let_s_start">LET\'S START</string>
    <string name="welcome">Welcome</string>
    <string name="take_care_of_your_health_test_your_knowledge_of_adolescence_health_by_taking_our_quiz">Take care of your health. Test your knowledge of adolescence health by taking our quiz.</string>
    <string name="submit">SUBMIT</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="next_quiz">NEXT QUIZ</string>
    <string name="highlight">Highlight</string>
    <string name="events">Events</string>
    <string name="recentlyadded">Recently Added</string>
    <string name="recommended">Recommended</string>
    <string name="your_daily_insights">Your Daily Insights</string>
    <string name="see_all">See All</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="courses">Courses</string>
    <string name="event">Events</string>
    <string name="highlights">Highlights</string>
    <string name="blogs">Blogs</string>
    <string name="information_storehouse">Information storehouse</string>
    <string name="frequently_asked_question_s">Frequently Asked Question\'s</string>
    <string name="all_categories">All Categories</string>
    <string name="all">All</string>
    <string name="please_check_out_the_faq_section_to_know_more_about">Please check out the Information Storehouse section to know more about </string>
    <string name="oops_no_products_found">Oops ! No found.</string>
    <string-array name="category_list">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>

    </string-array>
    <string name="correct_answer_title">Correct Answer</string>
    <string name="incorrect_answer_title">Incorrect Answer</string>
    <string name="answered_by">Answered by</string>
    <string name="correct_answer" tools:ignore="DuplicateDefinition">You have answered the question correctly</string>
    <string name="correct_answer_is">The correct answer is:</string>
    <string name="comments">Comments</string>
    <string name="completed">Completed</string>
    <string name="now_playing">Now Playing</string>
    <string name="complete">Complete</string>
    <string name="take_a_test">Take A Test</string>
    <string name="select_category">Select category</string>
    <string name="update_your_interests">Update Your Interests</string>
    <string name="update_your_health_issues">Update Your Health Issues</string>
    <string name="update_your_personal_info">Update Your Personal Info</string>
    <string name="update">Update</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions ]]></string>
    <string name="please_select_your_issues">Please select your issues</string>
    <string name="congratulations_you_have_attempted_all_quiz_stay_tuned_we_will_be_back_with_more_quiz">Congratulations you have attempted all quiz Stay tuned we will be back with more quiz</string>
    <string name="was_this_article_helpful">Was this article helpful?</string>
    <string name="previous_article">Previous Article</string>
    <string name="next_article">Next article</string>
    <string name="leave_a_comment">Leave A Comment</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="post_comment">POST COMMENT</string>
    <string name="resend_in">RESEND IN</string>
    <string name="search_for_blogs_courses_etc">Search for blogs, courses etc...</string>
    <string name="welcome_to_tsta_chat_support">Welcome to TSTA Chat Support</string>
    <string name="i_have_que_related_to">I have questions related to </string>
    <string name="please_type_your_question_our_expert_we_ll_get_back_to_you_within_24_hours">Please type your question our Expert We\'ll get back to you within 24 hours</string>
    <string name="chat_with_expert">Chat With Expert</string>
    <string name="my_query_is_not_listed">My query is not listed</string>
    <string name="please_select_the_issue_for_which_you_seek_support">Please select the issue for which you seek support</string>
    <string name="was_this_helpful">Was this helpful?</string>
    <string name="thank_you_for_reaching_out_to_tsta_support">Thank you for reaching out to TSTA Support.</string>
    <string name="were_we_able_to_win_you_over">Were we able to win you over?</string>
    <string name="ask_an_expert">Ask an Expert?</string>
    <string name="check_info_storehouse">Please check out the Information Storehouse section to know more about</string>
    <string name="tsta_expert">TSTA Expert</string>
    <string name="percent_complete">% Complete</string>
    <string name="submit_a_request">Submit a request</string>
    <string name="home">Home</string>
    <string name="ask_expert">Ask Expert</string>
    <string name="insights">Insights</string>
    <string name="quiz">Quiz</string>
    <string name="setting">Settings</string>
    <string name="are_you_a_partner_with_metropolis">Are you a Partner with Metropolis?</string>
    <string name="in_which_project_are_you_involved">In which project are you involved?</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="update_organization">Update Organization</string>
</resources>