<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LMS.LMSQuiz.LMSQuizMainActivity">

    <ImageView
        android:layout_width="@dimen/margin_300"
        android:layout_height="@dimen/margin_300"
        android:src="@drawable/quiz_start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_80"
        android:layout_above="@id/lin_quiz_lay"/>

    <LinearLayout
        android:id="@+id/lin_quiz_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_above="@id/btn_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/worksansregular"
            android:textSize="@dimen/text_size25"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_care_of_your_health_test_your_knowledge_of_adolescence_health_by_taking_our_quiz"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:fontFamily="@font/worksansregular"
            android:textSize="@dimen/text_size14"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_30"
        android:includeFontPadding="false"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:fontFamily="@font/worksansbold"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:background="@drawable/active_con_btn"
        android:layout_marginBottom="@dimen/margin_30"
        android:text="@string/let_s_start"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size14" />

</RelativeLayout>